@@ -9,6 +9,9 @@
 "OPTIONS_TREES","Trees","Options panel group title."
 "OPTIONS_NETS","Networks","Options panel group title."
 "OPTIONS_VEHICLES","Vehicles","Options panel group title."
+"OPTIONS_CITIZENS","Citizens","Options panel group title."
+"MAX_DISTANCE","Maximum visibility distance","Slider in options panel."
+"MAX_DISTANCE_TIP","This is the maximum range at which these items will be visible.","Slider tooltop in options panel."
 "FALLBACK_DISTANCE","Fallback maximum visibility distance","Slider in options panel."
 "FALLBACK_DISTANCE_TIP","This is the maximum visibility distance that will be used if a dynamic distance cannot be calculated.","Slider tooltop in options panel."
 "MIN_DISTANCE","Minimum visibility distance","Slider in options panel."
@@ -19,6 +22,7 @@
 "DECAL_DISTANCE_TIP","Sets the distance at which decals will fade into the background.","Slider tooltop in options panel."
 "LOD_TRANSITION","LOD transition distance","Slider in options panel."
 "LOD_TRANSITION_TIP","The model will transition from normal to LOD at this percentage of the maximum visibility distance.","Slider tooltop in options panel."
+"LOD_TRANSITION_ABS_TIP","The model will transition from normal to LOD at this distance.","Slider tooltop in options panel."
 "TREE_DISTANCE","Tree LOD distance","Slider in options panel."
 "RESET_DEFAULT","Reset to defaults","Options panel button text."
 "HOTKEYS","Hotkeys","Options panel group title."
